--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -91,8 +91,9 @@ table {
  #nav {
      display: flex;
      justify-content: space-around;
-     width: 10%;
+     width: 20%;
      text-decoration: none;
+     margin-right: 39px;
  }
 
  .signup-link {
@@ -108,5 +109,22 @@ table {
  .login-link:visited {
      color: coral;
  }
+
+ .modal-background {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 10;
+}
+
+.modal-child {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 
