working on user auth

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
         };
       </script>
     <% end %>
-
+    <script type="text/javascript">
+         window.guitar = "<%= image_url('background.jpg') %>"
+      </script>
 
   </head>
 
