--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -63,7 +63,7 @@ table {
 	border-spacing: 0;
 }
 
- #main {
+#main {
      font-family: 'Lobster', cursive;
      display: flex;
      justify-content: space-between;
@@ -72,32 +72,39 @@ table {
      text-decoration: none;
      border-bottom: 1px solid lightgrey;
 
- }
+}
 
- #logo {
+#logo {
      font-size: 40px;
      text-decoration: none;
      margin-left: 39px;
      /* margin-right: 1000px; */
- }
+}
 
- .splash {
+.splash {
      text-decoration: none;
- }
- .splash:visited {
-     color: coral;
- }
+}
 
- #nav {
+.splash:visited {
+     color: coral;
+}
+
+#nav {
      display: flex;
      justify-content: space-around;
-     width: 20%;
+     width: 80%;
      text-decoration: none;
      margin-right: 39px;
- }
+}
+
+#nav-logout {
+     text-decoration: none;
+     margin-right: 39px;
+}
 
  .signup-link {
      text-decoration: none;
+     color: coral;
  }
  .signup-link:visited {
      color: coral;
@@ -105,9 +112,18 @@ table {
 
  .login-link {
      text-decoration: none;
+     color: coral;
  }
  .login-link:visited {
      color: coral;
+ }
+
+ .logout-link {
+     text-decoration: none;
+     color: coral;
+ }
+ .logout-link:visited {
+    color: coral;
  }
 
  .modal-background {
@@ -121,14 +137,19 @@ table {
 }
 
 .modal-child {
+  font-family: 'Lobster', cursive;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: coral;
+  background-color: whitesmoke;
   border-radius: 3px;
   padding: 5px 5px;
   box-shadow: 0 20px 20px rgba(0,0,0,0.2), 0 0px 50px rgba(0,0,0,0.2);
+}
+
+.background {
+    width: 100%;
 }
 
 
