added switching between form functionality

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -152,4 +152,11 @@ table {
     width: 100%;
 }
 
+.modal-heading {
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+    text-decoration: none;
+}
+
 
