finishing auth touches

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -144,7 +144,9 @@ table {
   transform: translate(-50%, -50%);
   background-color: whitesmoke;
   border-radius: 3px;
-  padding: 5px 5px;
+  padding: 20px;
+  height: 500px;
+  width: 300px;
   box-shadow: 0 20px 20px rgba(0,0,0,0.2), 0 0px 50px rgba(0,0,0,0.2);
 }
 
@@ -155,8 +157,32 @@ table {
 .modal-heading {
     display: flex;
     justify-content: space-around;
-    width: 80%;
     text-decoration: none;
+    background-color: tomato;
 }
 
+.modal-body {
+    display: flex;
+    align-items: center;
+    padding: 70px 0;
+    flex-direction: column;
+}
+
+.email {
+    width: 100%;
+    border-radius: 3px;
+}
+
+.password {
+    width: 100%;
+    border-radius: 3px;
+}
+
+.session-button {
+    width: 80%;
+    height: 30px;
+    background-color: coral;
+    color: cornsilk;
+    border-radius: 3px;
+}
 
