--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -144,7 +144,8 @@ table {
   transform: translate(-50%, -50%);
   background-color: whitesmoke;
   border-radius: 3px;
-  padding: 20px;
+  border-top: 1px solid black;
+  /* padding: 20px; */
   height: 500px;
   width: 300px;
   box-shadow: 0 20px 20px rgba(0,0,0,0.2), 0 0px 50px rgba(0,0,0,0.2);
@@ -158,7 +159,11 @@ table {
     display: flex;
     justify-content: space-around;
     text-decoration: none;
-    background-color: tomato;
+    /* background-color: crimson; */
+    width: 300px;
+    height: 38px;
+    padding-top: 10px;
+    border-bottom: 1px solid lightgrey;
 }
 
 .modal-body {
@@ -169,16 +174,26 @@ table {
 }
 
 .email {
+    border: 1px solid lightgrey;
+    background: none;
+    box-shadow: none;
     width: 100%;
     border-radius: 3px;
+    min-width: 174px;
 }
 
 .password {
+    border: 1px solid lightgrey;
+    background: none;
+    box-shadow: none;
     width: 100%;
     border-radius: 3px;
 }
 
 .session-button {
+    border: 0;
+    background: none;
+    box-shadow: none;
     width: 80%;
     height: 30px;
     background-color: coral;
@@ -186,3 +201,10 @@ table {
     border-radius: 3px;
 }
 
+.current-form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 115px;
+    border-bottom: 5px solid coral;
+}
