worked on scroll features

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
     <script type="text/javascript">
          window.guitar = "<%= image_url('background.jpg') %>"
       </script>
+    <script type="text/javascript">
+         window.gibson = "<%= image_url('gibson.jpg') %>"
+      </script>
 
   </head>
 
