--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -300,26 +300,75 @@ table {
 
 .discover {
     display: flex;
+    justify-content: left;
+    align-items: center;
     /* max-height: 6000px; */
-    border: 1px solid lightgrey;
+    /* border: 1px solid lightgrey; */
     overflow-x: auto;
     padding-left: 30px;
+    /* overflow-x: scroll; */
+    /* overflow-x: visible; */
 }
 
 .discover .tile {
-    min-width: 240px;
+    min-width: 219px;
     height: 325px;
-    padding: 0px 12px;
-    margin-bottom: 500px;
-    border: 1px solid black;
+    /* padding: 0px 12px; */
+    margin-bottom: 5px;
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+    margin-right: 12px;
+}
+
+.discover .tile:hover{
+    box-shadow: 0 20px 20px rgba(0,0,0,0.2), 0 0px 50px rgba(0,0,0,0.2);
+}
+
+.listing {
+    width: 219px;
+    height: 325px;
+    display: flex;
+    /* align-items: center; */
+    flex-direction: column;
+    border: 1px solid lightgray;
+    font-family: sans-serif;
+}
+
+.listing-content h3{
+    padding-top: 10px;
+    padding-bottom: 35px;
+}
+
+.listing-content section{
+    padding-bottom: 5px;
+}
+
+.listing-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    padding-left: 5px;
+}
+
+.listing img{
+    min-width: 218px;
+    max-height: 218px;
 }
 
 .discover-heading {
-    padding-left: 30px;
-    padding-bottom: 10px;
-    font-size: x-large;
-    font-family: 'Open Sans Condensed', sans-serif;
+    padding-left: 400px;
+    padding-bottom: 65px;
+    padding-top: 65px;
+    font-size: 32.2px;
+    font-family: sans-serif;
 }
+
+/* .discover-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} */
 
 .demo {
     font-family: 'Open Sans Condensed', sans-serif;
