--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -128,6 +128,9 @@ table {
     text-decoration: none;
     color: #F6870F;
 }
+.logout-link i{
+    font-size: xx-large;
+}
 .logout-link:hover {
     cursor: pointer;
 }
@@ -147,6 +150,7 @@ table {
 
 #cart h3 {
     font-size: small;
+    font-family: 'Roboto', sans-serif;
 }
 
 .navbar {
@@ -184,6 +188,7 @@ table {
 }
 
 .background {
+    opacity: 1;
     width: 100%;
     max-height: 667px;
     padding-bottom: 30px;
@@ -215,7 +220,7 @@ table {
 }
 
 .form-header {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     font: bold;
     font: bold;
     display: flex;
@@ -223,47 +228,59 @@ table {
     margin-top: 25px;
 }
 
+.errors {
+    font-family: 'Roboto', sans-serif;
+    color: crimson;
+}
+
 .email {
-    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
     border: 1px solid lightgrey;
     background: none;
     box-shadow: none;
     width: 100%;
     border-radius: 3px;
-    min-width: 324px;
+    min-width: 312px;
     min-height: 36px;
     background-color: #E8F0FE;
+    margin-top: 7px;
+    border-radius: 6px;
 }
 
 .password {
-    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
     border: 1px solid lightgrey;
     background: none;
     box-shadow: none;
     width: 100%;
     border-radius: 3px;
-    min-width: 302px;
+    min-width: 285px;
     min-height: 36px;
     background-color: #E8F0FE;
+    margin-top: 7px;
+    margin-right: 5px;
+    border-radius: 6px;
 }
 
 .label {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: small;
-    font: bolder;
+    font-weight: 500;
+    color: #414141;
 }
 
 .session-button {
     border: 0;
     background: none;
     box-shadow: none;
-    width: 380px;
+    width: 363px;
     height: 30px;
     background-color: #F6870F;
     color: cornsilk;
     border-radius: 3px;
     margin-bottom: 10px;
-    font-family: 'Open Sans Condensed', sans-serif;
+    margin-left: 7px;
+    font-family: 'Roboto', sans-serif;
     font-size: large;
 }
 .session-button:hover {
@@ -291,17 +308,68 @@ table {
     cursor: pointer;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
 .search-bar1 {
+    border: 1px solid lightgrey;
+    background: none;
+    box-shadow: none;
+    height: 40px;
+    width: 800px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    font-family: 'Roboto', sans-serif;
+    font-size: large;
+    font-weight: 300;
+    color: lightgrey;
+    padding-left: 10px;
+}
+.search-bar1:focus {
+    outline: none;
+}
+
+#search-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid lightgrey;
+    background: none;
+    box-shadow: none;
+    height: 38px;
+    width: 38px;
+    /* border-bottom-right-radius: 3px; */
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+}
+
+.search {
+    display: flex;
+    margin-right: 125px;
+}
+
+
+
+.search-bar2 {
     border: 1px solid lightgrey;
     background: none;
     box-shadow: none;
     height: 30px;
     width: 800px;
-    font-family: 'Lobster', cursive;
+    font-family: 'Roboto', sans-serif;
     color: lightgrey;
 }
 
-#search-button {
+#search-button2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -312,9 +380,66 @@ table {
     width: 30px;
 }
 
-.search {
+.search2 {
     display: flex;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.listing {
+    width: 219px;
+    height: 325px;
+    display: flex;
+    /* align-items: center; */
+    flex-direction: column;
+    border: 1px solid lightgray;
+    font-family: sans-serif;
+}
+
+.listing-content h3{
+    padding-top: 10px;
+    padding-bottom: 35px;
+}
+
+.listing-content section{
+    padding-bottom: 5px;
+    color: #F6870F;
+}
+
+.listing-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    padding-left: 5px;
+}
+
+.listing-content p{
+    color: #F6870F;
+}
+
+.listing img{
+    min-width: 218px;
+    max-height: 218px;
+}
+
+
+
+
+
 
 .discover {
     display: flex;
@@ -336,50 +461,21 @@ table {
     /* border: 1px solid black; */
     display: flex;
     justify-content: center;
-    margin-right: 12px;
+    margin-right: 25px;
 }
 
 .discover .tile:hover{
     box-shadow: 0 20px 20px rgba(0,0,0,0.2), 0 0px 50px rgba(0,0,0,0.2);
 }
 
-.listing {
-    width: 219px;
-    height: 325px;
-    display: flex;
-    /* align-items: center; */
-    flex-direction: column;
-    border: 1px solid lightgray;
-    font-family: sans-serif;
-}
-
-.listing-content h3{
-    padding-top: 10px;
-    padding-bottom: 35px;
-}
-
-.listing-content section{
-    padding-bottom: 5px;
-}
-
-.listing-content{
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    padding-left: 5px;
-}
-
-.listing img{
-    min-width: 218px;
-    max-height: 218px;
-}
 
 .discover-heading {
-    padding-left: 400px;
-    padding-bottom: 65px;
+    padding-bottom: 10px;
     padding-top: 65px;
-    font-size: 32.2px;
-    font-family: sans-serif;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    margin-left: 30px;
 }
 
 /* .discover-section{
@@ -388,34 +484,61 @@ table {
     align-items: center;
 } */
 
+
+
+
+
+
+
 .demo {
-    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
     border: 1px solid lightgrey;
     background: none;
     box-shadow: none;
     height: 34px;
-    width: 380px;
+    width: 363px;
     border-radius: 3px;
     background-color: #F6870F;
     display: flex;
     align-items: center;
     justify-content: center;
     color: cornsilk;
+    margin-left: 7px;
 }
 .demo:hover {
     cursor: pointer;
 }
 
+
+
+
+
+
+
+
 .body {
     position: relative;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 .second-search {
-    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
     position: absolute;
-    top: 220px;
+    top: 200px;
     left: 50px;
-    color: blanchedalmond;
+    color: cornsilk;
 }
 
 .s2-heading {
@@ -437,8 +560,19 @@ table {
 
 .cat-link {
     text-decoration: none;
-    color: blanchedalmond;
+    color: cornsilk;
 }
+
+
+
+
+
+
+
+
+
+
+
 
 .filter {
     min-width: 1184px;
@@ -472,7 +606,7 @@ table {
     color: #414141;
     font-size: 13px;
     text-decoration: none;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .bar2 {
@@ -490,5 +624,137 @@ table {
     color: #414141;
     font-size: 13px;
     text-decoration: none;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
+
+
+
+
+
+
+
+
+
+.footer {
+    margin-top: 100px;
+    background-color: #313131;
+    min-width: auto;
+    min-height: 337px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-div {
+    display: flex;
+    justify-content: space-between;
+    width: 800px;
+    margin-left: 30px;
+}
+
+.footer-div ul{
+    font-family: 'Roboto', sans-serif;
+}
+
+.footer-div ul li{
+    margin-bottom: 15px;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: small;
+}
+#li1 {
+    font-weight: 800;
+}
+
+
+
+
+
+
+
+
+
+.bottom-footer {
+    background-color: #141414;
+    min-width: auto;
+    min-height: 173px;  
+    display: flex;
+    justify-content: center;
+}
+
+.bf-section1 {
+    color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+.bf-section1 i{
+    font-size: xx-large;
+    margin-right: 8px;
+    margin-top: 30px;
+}
+
+.bf-section2 {
+    color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+.bf-section2 i{
+    font-size: xx-large;
+    margin-right: 8px;
+    margin-top: 30px;
+}
+
+.bf-div {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    margin-top: 15px;
+}
+
+
+
+
+
+
+
+
+.staffpicks {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    /* max-height: 6000px; */
+    /* border: 1px solid lightgrey; */
+    overflow-x: auto;
+    padding-left: 30px;
+    /* overflow-x: scroll; */
+    /* overflow-x: visible; */
+}
+
+.staffpicks .stile {
+    min-width: 219px;
+    height: 325px;
+    /* padding: 0px 12px; */
+    margin-bottom: 5px;
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+    margin-right: 12px;
+    margin-right: 25px;
+}
+
+.staffpicks .stile:hover{
+    box-shadow: 0 20px 20px rgba(0,0,0,0.2), 0 0px 50px rgba(0,0,0,0.2);
+}
+
+.staffpicks-heading {
+    padding-left: 350px;
+    padding-bottom: 65px;
+    padding-top: 65px;
+    font-size: 32.2px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
 }
