--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -608,6 +608,9 @@ table {
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
 }
+.filter-navbar:hover {
+    color: #F6870F;
+}
 
 .bar2 {
     width: 443px;
@@ -625,6 +628,9 @@ table {
     font-size: 13px;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
+}
+.filter-navbar2:hover {
+    color: #F6870F;
 }
 
 
