--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -446,7 +446,7 @@ table {
     /* align-items: center; */
     flex-direction: column;
     border: 1px solid lightgray;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .listing-content h3{
@@ -474,6 +474,83 @@ table {
     min-width: 218px;
     max-height: 218px;
 }
+
+
+
+.listing-item {
+    width: 1184px;
+    height: 2275.05px;
+    display: flex;
+    /* align-items: center; */
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 0px 105px;
+    padding-top: 30px;
+}
+
+.listing-item-content {
+    width: 378.09px;
+    height: 945.67px;
+    display: flex;
+    flex-direction: column;
+}
+
+.listing-item-content section{
+    padding-bottom: 5px;
+    color: #414141;
+    display: flex;
+    flex-direction: row;
+    width: 110px;
+    height: 16px;
+    font-size: 12.8px;
+    font-weight: 300;
+    font-family: 'Roboto', sans-serif;
+}
+.listing-item-seperator {
+    margin: 0px 7.68px;
+}
+
+.listing-item-title {
+    font-family: 'Roboto', sans-serif;
+    font-size: 25.6px;
+    color: #414141;
+    width: 378.09px;
+    height: 60px;
+}
+.listing-item-price {
+    font-family: 'Roboto', sans-serif;
+    font-size: 28.8px;
+    color: #414141;
+    width: 106.72px;
+    height: 34px;
+}
+
+.listing-item-button {
+    color: #FFFFFF;
+    background-color: #F6870F;
+    width: 378.09px;
+    height: 39.19px;
+    font-size: 17.60px;
+    border-radius: 6px;
+    box-shadow: none;
+    border: 0;
+    margin-top: 15px;
+}
+.listing-item-button:hover {
+    cursor: pointer;
+    outline: none;
+}
+
+
+.listing-item-img{
+    min-width: 750px;
+    max-height: 687.47px;
+    border: 1px solid lightgray;
+}
+
+
+
+
 
 
 
