--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -98,8 +98,44 @@ table {
 }
 
 #nav-logout {
-     text-decoration: none;
-     margin-right: 39px;
+    text-decoration: none;
+    margin-right: 39px;
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #E8F0FE;
+  min-width: 130px;
+  min-height: 50px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Show the dropdown menu on hover */
+#nav-logout:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-button {
+    font-family: 'Roboto', sans-serif;
+    background-color: #F6870F;
+    color: #FFFFFF;
+    border: 0;
+    box-shadow: none;
+    border-radius: 3px;
+    margin-top: 5px;
+}
+.dropdown-button:hover {
+    cursor: pointer;
+}
+
+.dropdown-title {
+    margin-top: 5px;
+    border-bottom: 1px solid lightgray;
 }
 
 .user-interface {
