--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -906,6 +906,7 @@ table {
     height: 945.67px;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .listing-item-content p{
@@ -967,6 +968,53 @@ table {
     min-height: 687.47px;
     border: 1px solid lightgray;
 }
+
+.drpdwn {
+    top: -80px;
+    left: 165px;
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 300px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    flex-direction: row;
+    font-family: 'Roboto', sans-serif;
+    border-radius: 5px;
+}
+.small-img {
+    height: 85px;
+    border-bottom-left-radius: 5px;
+}
+.small-h3 {
+    margin-top: 5px;
+    padding-left: 50px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid lightgray;
+}
+
+.added-to-cart {
+    display: block;
+}
+
+.dropdown-info {
+    display: flex;
+    flex-direction: row;
+}
+.small-div{
+    padding-left: 5px;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1118,7 +1166,7 @@ table {
 
 .demo {
     font-family: 'Roboto', sans-serif;
-    border: 1px solid lightgrey;
+    border: 1px solid rgb(187, 91, 91);
     background: none;
     box-shadow: none;
     height: 34px;
@@ -1130,6 +1178,7 @@ table {
     justify-content: center;
     color: cornsilk;
     margin-left: 7px;
+    font-size: large;
 }
 .demo:hover {
     cursor: pointer;
