--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,7 +45,8 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
+    overflow-x: hidden;
 }
 ol, ul {
 	list-style: none;
@@ -918,7 +919,7 @@ table {
     color: #414141;
     display: flex;
     flex-direction: row;
-    width: 110px;
+    width: 300px;
     height: 16px;
     font-size: 12.8px;
     font-weight: 300;
@@ -1001,7 +1002,7 @@ table {
 .dropdown-info {
     display: flex;
     flex-direction: row;
-    
+
 }
 .small-div{
     padding-left: 5px;
@@ -1049,7 +1050,8 @@ table {
     align-items: center;
     flex-direction: column;
     margin-top: 10px;
-    overflow-y: hidden;
+    overflow-y: scroll;
+    max-height: 450px;
 }
 
 .review {
@@ -1229,7 +1231,7 @@ table {
 }
 
 .category-link {
-    margin-top: 8px;
+    margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -1257,7 +1259,7 @@ table {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 40px;
+    margin-left: 10px;
     border-bottom: 1px solid lightgray;
 }
 
@@ -1281,7 +1283,7 @@ table {
 .filter-navbar {
     padding-right: 20px;
     color: #414141;
-    font-size: 13px;
+    font-size: 15px;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
 }
