--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1068,6 +1068,10 @@ table {
     display: flex;
     flex-direction: row;
     padding-left: 10px;
+    justify-content: space-between;
+}
+.review-heading {
+    display: flex;
 }
 .review-map-title {
     padding-right: 5px;
@@ -1082,7 +1086,7 @@ table {
 }
 
 .review-map-user {
-    margin-left: 50px;
+    margin-left: 15px;
     margin-top: 8px;
     font-family: 'Roboto', sans-serif;
     background-color: #F6870F;
@@ -1095,7 +1099,7 @@ table {
     display: none;
 }
 .review-map-update {
-    margin-left: 50px;
+    margin-left: 15px;
     margin-top: 8px;
     font-family: 'Roboto', sans-serif;
     background-color: #F6870F;
@@ -1610,4 +1614,33 @@ table {
 }
 .checkout-box-title {
     font-family: 'Roboto', sans-serif;
+}
+
+
+
+
+
+
+.result-index {
+    border: 1px solid lightgray;
+    border-radius: 3px;
+    background-color: antiquewhite;
+    width: 1000px;
+    min-height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 185px;
+    margin-top: 20px
+}
+.index-title {
+    font-family: 'Roboto', sans-serif;
+}
+.index-price {
+    font-family: 'Roboto', sans-serif;
+}
+
+
+.review-buttons {
+    margin-right: 10px;
 }
